 *   2.5.7:
 *   - + made altlog dumpable via -q 
 *   2.5.8:
 *   - ~ --dupefile option was ignored when calling macros
 *   2.5.9:
 *   - ~ potential buffer overflow (dirlog rebuild) 
 *   2.5.10:
 *   - ~ segfault when string matching against non-existant key ('?x' directive)
 *   2.5.11:
 *   - + base64 encoding/decoding (?B/?D extended directives, respectively)
 *
 * v2.4:
 *
 *   - + 'user' and 'group' fields, see under FILESYSTEM in DATA_STRUCTURES
 *   - + 'm:siterootn' field
 *   - % Got rid of "(MISSING)" messages ('user' and 'group') fields, instead it returns blank when info can't be obtained
 *   - ~ Segfaulted when looking up 'user' or 'group' fields, in certain cases
 *   - ~ Called 'md_init' twice when referencing 'user' or 'group' fields (FILESYSTEM)
 *   - ~ Not showing proper paths on error messages, when unable to open passwd or group files
 *   - + Libs to translate internal error codes to message strings
 *   - + Implemented heapsort algorithm
 *   - + '--loadqa' and '--sortmethod'
 *   - ~ Legacy sort function inverting order
 *   - + 'comp' field added to '?q' extended directive (check if log is compressed
 *   2.4.1:
 *   - + Implemented quicksort algorithm (rev. 1_b1)
 *   - ~ Plugged memory leak (sorting functions) (rev. 1_b1)
 *   2.4.2:
 *   - ~ qsort was broken (rev. 2)
 *   2.4.3:
 *   - ~ Floating point values sorting broken (since 2.4.1) (rev. 3)
 *   2.4.4:
 *   - % Changed default altlog output (rev. 4_b2)
 *   - ~ 'ipc' generic field broken (was showing PID instead of IPC key) (rev. 4_b3) 
 *   - + Implemented string sorting (rev. 4_b4)
 *   - % Made --sort <mode> parameter optional (rev. 4_b5)
 *   2.4.5:
 *   - + 'nuser' and 'ngroup' dirlog fields (extra info), see DATA_STRUCTURES (rev. 5_b1)
 *   - ~ altlog data structure wasn't aligned to 4b (rev. 5_b2)
 *   - % Changed some altlog properties, update filelog scripts and rebuild filelog if using it (rev. 5)
 *   2.4.6: