@@ -30,6 +30,7 @@
  *   - ~ segfault when string matching against non-existant key ('?x' directive)
  *   2.5.11:
  *   - + base64 encoding/decoding (?B/?D extended directives, respectively)
+ *   - + ?s extended directive (see MANUAL)
  *
  * v2.4:
  *
